# tp-cuatrimestral

./: CMakeLists.txt  main.c
exercise1/: Appliance.c  Appliance.h  Cart.c  Cart.h  Catalogue.c  Catalogue.h  Invoice.c  Invoice.h  Label.h  Manufacturer.c  Manufacturer.h  Provider.c  Provider.h  Shop.c  Shop.h
exercise2/: Accessory.c  Accessory.h  Camera.c  Camera.h  Producer.c  Producer.h  Product.c  Product.h  RegisteredUser.c  RegisteredUser.h  Sell.c  Sell.h  SellLine.c  SellLine.h  Supplier.c  Supplier.h
exercise3/: Book.c  Book.h  Library.c  Library.h  Loan.c  Loan.h  Magazine.c  Magazine.h  Material.c  Material.h  Person.c  Person.h  Professor.c  Professor.h  Student.c  Student.h
exercise4/: Client.c  Client.h  Invoice.c  Invoice2.c  Invoice2.h  Recepcionist.h  Receptionist.c  Receptionist.h  Room.c  Room.h
exercise5/: Administrator.c  Administrator.h  Customer.c  Customer.h  License.c  License.h  Movie.c  Movie.h  Rent.c  Rent.h  Surplus.h
tp1/: Cart.c  Cart.h  CartLine.h  Catalogue.c  Catalogue.h  Electrodomestic.c  Electrodomestic.h  Invoice.h  InvoiceLine.h  Label.h  Manufacturer.c  Manufacturer.h  Provider.c  Provider.h
tp3/: Book.c  Book.h  Library.c  Library.h  Loan.c  Loan.h  Magazine.h  Material.c  Material.h  Person.c  Person.h  Professor.h  Student.h
tp4/: Client.c  Client.h  Invoice.c  Invoice.h  Recepcionist.c  Recepcionist.h  Room.c  Room.h
tp5/: Administrator.c  Administrator.h  Customer.c  Customer.h  License.c  License.h  Rent.h  Surplus.h
